--- a/examples/medplum-eligibility-demo/package.json
+++ b/examples/medplum-eligibility-demo/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc && vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "prettier": {
     "printWidth": 120,
@@ -37,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.21.3",
     "typescript": "5.3.3",
-    "vite": "5.0.12"
+    "vite": "5.0.12",
+    "vitest": "1.3.1"
   }
 }
